Only apply offset to ellipsis from relative inlines

A follow-up to https://chromium-review.googlesource.com/c/563625/

Bug: 744265
Change-Id: I8cac8b1f421d8a2078a002b07f965e2ab5b0837b
Reviewed-on: https://chromium-review.googlesource.com/574853
Commit-Queue: Robert Hogan <robhogan@gmail.com>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Cr-Commit-Position: refs/heads/master@{#487669}
Former-commit-id: 00d5a66a3be6746400f1f65b7e1a3cd97e950f36